--- a/Copy_of_Airbnb_project.ipynb
+++ b/Copy_of_Airbnb_project.ipynb
@@ -6,37 +6,23 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "vncDsAP0Gaoa",
-        "FJNUwmbgGyua",
         "w6K7xa23Elo4",
-        "x71ZqKXriCWQ",
         "7hBIi_osiCS2",
+        "JlHwYmJAmNHm",
         "PoPl-ycgm1ru",
+        "_xUpRUvc25OC",
         "nA9Y7ga8ng1Z",
         "dauF4eBmngu3",
         "bKJF3rekwFvQ",
         "K5QZ13OEpz2H",
         "lQ7QKXXCp7Bj",
-        "FxntUy4qU7m3",
-        "EM7whBJCYoAo",
-        "fge-S5ZAYoAp",
-        "85gYPyotYoAp",
-        "RoGjAbkUYoAp",
-        "F6T5p64dYrdO",
-        "y-Ehk30pYrdP",
-        "QHF8YVU7Yuh3",
-        "GwzvFGzlYuh3",
-        "qYpmQ266Yuh3",
+        "OH-pJp9IphqM",
         "bbFf2-_FphqN",
         "_ouA3fa0phqN",
-        "Seke61FWphqN",
-        "r2jJGEOYphqO",
-        "b0JNsNcRphqO",
-        "tgIPom80phqQ",
-        "JMzcOPDDphqR",
+        "NC_X3p0fY2L0",
         "JcMwzZxoAimU",
-        "8G2x9gOozGDZ",
-        "H0kj-8xxnORC"
+        "H0kj-8xxnORC",
+        "gCX9965dhzqZ"
       ],
       "include_colab_link": true
     },
@@ -94,10 +80,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Analysis or Airbnb DATA set**\n",
+        "**Analysis on Airbnb DATA set**\n",
+        "\n",
         "Airbnb  is an online marketplace that connects people who want to rent out their homes with people looking for accommodations in specific locales. The company has come a long way since 2007, when its co-founders first came up with the idea to invite paying guests to sleep on an air mattress in their living room....   This dataset has around 49,000 observations in it with 16 columns and it is a mix of categorical and numeric values.\n",
         "the main goal of the analysis this data set is to improve the bussiness model and easily acess  this type of models in other places of word most of people like to travel . and most of the travelers find out that accomodation is the major problem during trips. and thats why i Take up this project to find out some insight how can people save there money through those platform .\n",
-        "and from this data i find out that  listing is not equally distributed around the area and even people prefer staying at some common location like brooklyn and manhatten"
+        "i have soo many question soo i start with which location has most number of listing and and what are type of rooms there and on which location people willing to spend nights. Then i find out who is most popular host and if he is getting reviews or not. and distribution of price.and does latitudes and longitudes play a significant role in listing price. or  on which location people willing to spend more."
       ],
       "metadata": {
         "id": "F6v_1wHtG2nS"
@@ -232,7 +219,7 @@
         "# Dataset Rows & Columns count\n",
         "air.shape\n",
         "print(\"the number of rows in dataframe is:\",air.shape[0])\n",
-        "print(\"the number of rows in dataframe is:\",air.shape[1])"
+        "print(\"the number of columns in dataframe is:\",air.shape[1])"
       ],
       "metadata": {
         "id": "Kllu7SJgmLij"
@@ -330,7 +317,7 @@
       "cell_type": "code",
       "source": [
         "air.drop(['last_review',\"id\"],axis=1,inplace=True)\n",
-        "# here i drop the column last_review because i dont need it for anaylisis"
+        "# here i drop the column last_review  , id because i dont need it for anaylisis"
       ],
       "metadata": {
         "id": "7p7aUlKR2pc2"
@@ -602,7 +589,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*** Entire apartments are often priced higher than private rooms because they offer more space and privacy. This can potentially lead to higher revenue for the business and probabibly manhattan revenue is increasing over the time because they have more listing then any other and eventhough they have more private appartment then other location ..that attract travelers who prioritize space, privacy over price***"
+        "*** Entire apartments are often priced higher than private rooms because they offer more space and privacy. This can potentially lead to higher revenue for the business and probably manhattan revenue is increasing over the time because they have more listing then any other and eventhough they have more private appartment then other location ..that attract travelers who prioritize space, privacy over price***"
       ],
       "metadata": {
         "id": "BcBbebzrYklV"
@@ -621,6 +608,7 @@
       "cell_type": "code",
       "source": [
         "# FRequancy of the listing name\n",
+        "\n",
         "plt.figure(figsize=(20,8))\n",
         "plt.ylim(4,20)\n",
         "name_ = air[\"name\"].value_counts()\n",
@@ -729,7 +717,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "***According to the data we can see that the price of the listing of manhattan is around  50% more then the other location  we can say that manhattan  are mostly targeting guest  who are willing to pay more and priotizing luxury and willing to spend they are targeting weathly people on the other hand bronx has the lowest listing price soo they is targeting to lower class of society who doesnt spend alot on luxury  ***"
+        "***According to the data we can see that the price of the listing of manhattan is around  50% more then the other location  we can say that manhattan  are mostly targeting guest  who are willing to pay more and priotizing luxury and willing to spend they are targeting weathly people on the other hand bronx has the lowest listing price soo they are targeting to lower class of society who doesnt spend alot on luxury  ***"
       ],
       "metadata": {
         "id": "4jstXR6OYoAp"
@@ -753,15 +741,6 @@
       "metadata": {
         "id": "zfJ8IqMcYoAp"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Cvd3mSfbrHwf"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1007,7 +986,7 @@
       "source": [
         "# Chart - 7 visualization code\n",
         "\n",
-        "sns.boxplot(data=air, x='location',y='availability_365',palette=\"deep\")\n",
+        "sns.boxplot(data=air, x='location',y='availability_365',palette=\"deep\" ,notch =True, )\n",
         "plt.show()\n",
         "\n"
       ],
@@ -1029,7 +1008,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**From the above data we can clearly see that average avilable room entire year in staten island bronx is higher then other even though they they dont have large number of listing that clearly means that you can easily get listing in those places reather then brooklyn and manhattan**"
+        "**From the above data we can clearly see that average avilable room entire year in staten island and bronx is higher then other even though they they dont have large number of listing that clearly means that you can easily get listing in those places reather then brooklyn and manhattan**"
       ],
       "metadata": {
         "id": "Po6ZPi4hphqO"
@@ -1131,97 +1110,7 @@
         "#### Chart - 9"
       ],
       "metadata": {
-        "id": "YJ55k-q6phqO"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "plt.figure(figsize=(15, 8))\n",
-        "plt.subplot(2, 3, 1)\n",
-        "manhat=air[air[\"location\"]==\"Manhattan\"][\"host_name\"].value_counts().head(5)\n",
-        "manhat.plot(kind=\"bar\",color=\"m\")\n",
-        "plt.title(\"Manhattan\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "plt.subplot(2, 3, 2)\n",
-        "brook =air[air[\"location\"]==\"Brooklyn\"][\"host_name\"].value_counts().head(6)\n",
-        "brook.plot(kind=\"bar\")\n",
-        "plt.title(\"Brooklyn\")\n",
-        "\n",
-        "\n",
-        "plt.subplot(2, 3, 3)\n",
-        "queen =air[air[\"location\"]==\"Queens\"][\"host_name\"].value_counts().head(6)\n",
-        "queen.plot(kind=\"bar\",color=\"m\")\n",
-        "plt.title(\"Queens\")\n",
-        "\n",
-        "plt.subplot(2, 3, 4)\n",
-        "staten = air[air[\"location\"]==\"Staten Island\"][\"host_name\"].value_counts().head(6)\n",
-        "staten.plot(kind=\"bar\")\n",
-        "plt.title(\"Staten island\")\n",
-        "\n",
-        "plt.subplot(2, 3, 5)\n",
-        "bronx = air[air[\"location\"]==\"Bronx\"][\"host_name\"].value_counts().head(6)\n",
-        "bronx.plot(kind=\"bar\",color=\"m\")\n",
-        "plt.title(\"Bronx\")\n",
-        "\n",
-        "plt.tight_layout()\n",
-        "\n",
-        "plt.show()\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "B2aS4O1ophqO"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 1. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "OVtJsKN_phqQ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**From the analysis we can say that sonder(NYc) is geographically concentrated because he has properties only in manhattan wherase david and michael  anda jhon has a diversified listing has property all over the places**"
-      ],
-      "metadata": {
-        "id": "ngGi97qjphqQ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. Will the gained insights help creating a positive business impact?\n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "lssrdh5qphqQ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**As the sonder have listing only in manhattan he is concentrated only to one place moreover other are less dependent on the performance of a single location they are diversified having more then one location give compiative advantage from others person with multiple locations lower risk of business disruption due to regional events or disasters.**"
-      ],
-      "metadata": {
-        "id": "tBpY5ekJphqQ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Chart - 10"
-      ],
-      "metadata": {
-        "id": "U2RJ9gkRphqQ"
+        "id": "AgPUml0y15JA"
       }
     },
     {
@@ -1235,7 +1124,7 @@
         "\n"
       ],
       "metadata": {
-        "id": "GM7a4YP4phqQ"
+        "id": "rKnJxeTe15JO"
       },
       "execution_count": null,
       "outputs": []
@@ -1246,7 +1135,7 @@
         "##### 1. Why did you pick the specific chart?"
       ],
       "metadata": {
-        "id": "1M8mcRywphqQ"
+        "id": "H6PoRRuE15JP"
       }
     },
     {
@@ -1255,7 +1144,7 @@
         "**To compare things between differnet host soo its best suited**"
       ],
       "metadata": {
-        "id": "8agQvks0phqQ"
+        "id": "j9OVe7C_15JP"
       }
     },
     {
@@ -1264,7 +1153,7 @@
         "##### 2. What is/are the insight(s) found from the chart?"
       ],
       "metadata": {
-        "id": "tgIPom80phqQ"
+        "id": "7GvM2wpo15JP"
       }
     },
     {
@@ -1273,7 +1162,7 @@
         "**From this we can see that  Michael and david gets reviews frequently then any others. The frequency of reviews can also indicate the customer's level of satisfaction or dissatisfaction**"
       ],
       "metadata": {
-        "id": "Qp13pnNzphqQ"
+        "id": "Ty_hkT-015JP"
       }
     },
     {
@@ -1283,22 +1172,13 @@
         "Are there any insights that lead to negative growth? Justify with specific reason."
       ],
       "metadata": {
-        "id": "JMzcOPDDphqR"
+        "id": "WWO-w5tY15JQ"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**Reviews are one of the most important thing for any organisation to work because with the help of the reviews host knows that what costomers are expecting from the host and his team .  with the help of this host can also make decisons for future outlook..leaving reviews to share their experiences, help in the growth of the business.**"
-      ],
-      "metadata": {
-        "id": "R4Ka1PC2phqR"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Chart - 11"
+        "#### Chart - 10"
       ],
       "metadata": {
         "id": "x-EpHcCOp1ci"
@@ -1377,6 +1257,109 @@
       ],
       "metadata": {
         "id": "druuKYZpp1ck"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Reviews are one of the most important thing for any organisation to work because with the help of the reviews host knows that what costomers are expecting from the host and his team .  with the help of this host can also make decisons for future outlook..leaving reviews to share their experiences, help in the growth of the business. and we can clearly see that popular host are getting most reviews**"
+      ],
+      "metadata": {
+        "id": "ncThZC-r15JQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Chart - 11"
+      ],
+      "metadata": {
+        "id": "YJ55k-q6phqO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(18, 7))\n",
+        "plt.subplot(2, 3, 1)\n",
+        "manhat=air[air[\"location\"]==\"Manhattan\"][\"host_name\"].value_counts().head(5)\n",
+        "manhat.plot(kind=\"bar\",color=\"m\")\n",
+        "plt.title(\"Manhattan\")\n",
+        "plt.xlabel(\"host name\")\n",
+        "\n",
+        "\n",
+        "plt.subplot(2, 3, 2)\n",
+        "brook =air[air[\"location\"]==\"Brooklyn\"][\"host_name\"].value_counts().head(6)\n",
+        "brook.plot(kind=\"bar\")\n",
+        "plt.title(\"Brooklyn\")\n",
+        "plt.xlabel(\"host name\")\n",
+        "\n",
+        "plt.subplot(2, 3, 3)\n",
+        "queen =air[air[\"location\"]==\"Queens\"][\"host_name\"].value_counts().head(6)\n",
+        "queen.plot(kind=\"bar\",color=\"m\")\n",
+        "plt.title(\"Queens\")\n",
+        "plt.xlabel(\"host name\")\n",
+        "\n",
+        "plt.subplot(2, 3, 4)\n",
+        "staten = air[air[\"location\"]==\"Staten Island\"][\"host_name\"].value_counts().head(6)\n",
+        "staten.plot(kind=\"bar\")\n",
+        "plt.title(\"Staten island\")\n",
+        "plt.xlabel(\"host name\")\n",
+        "\n",
+        "\n",
+        "plt.subplot(2, 3, 5)\n",
+        "bronx = air[air[\"location\"]==\"Bronx\"][\"host_name\"].value_counts().head(6)\n",
+        "bronx.plot(kind=\"bar\",color=\"m\")\n",
+        "plt.title(\"Bronx\")\n",
+        "plt.xlabel(\"host name\")\n",
+        "\n",
+        "plt.tight_layout()\n",
+        "\n",
+        "plt.show()\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "B2aS4O1ophqO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 1. What is/are the insight(s) found from the chart?"
+      ],
+      "metadata": {
+        "id": "OVtJsKN_phqQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**From the analysis we can say that sonder(NYc) is geographically concentrated because he has properties only in manhattan wherase david and michael  and  jhon has a diversified listing has property all over the places**"
+      ],
+      "metadata": {
+        "id": "ngGi97qjphqQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### 2. Will the gained insights help creating a positive business impact?\n",
+        "Are there any insights that lead to negative growth? Justify with specific reason."
+      ],
+      "metadata": {
+        "id": "lssrdh5qphqQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**As the sonder have listing only in manhattan he is concentrated only to one place moreover other are less dependent on the performance of a single location they are diversified having more then one location give compiative advantage from others person with multiple locations lower risk of business disruption due to regional events or disasters.**"
+      ],
+      "metadata": {
+        "id": "tBpY5ekJphqQ"
       }
     },
     {
@@ -1514,7 +1497,25 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As we can see that most number of listing are in manhattan and brooklyn"
+        "* We find out that the manhattan and brooklyn has the most number of listing and people prefers private rooms over other but in manhattan they prefer entire appartment\n",
+        "* We find out that hillside hotels ,home away from home and NY multi unit building has most number of branches\n",
+        "* People are willing to pay 50% more for for manhattan listing then other listings\n",
+        "* Majority of people are willing to spends there night in manhattan and brooklyn\n",
+        "* latitudes and logitude plays a cruical roll for a business.\n",
+        "* Its easy to get a room in staten island and bronax rather  then manhattan and brooklyn in peak season beacause of avilability of room .\n",
+        "* Michel david and sonders are most popular host of all but sonders has all listing in only manhattan michel and david has diversifed listings.\n",
+        "* Manhattan is the location where people are willing to post reviews and michel and david getting highest number of reviews\n",
+        "* Majority of people willing to pay under 3000 USD for a listing.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "Fjb1IsQkh3yE"
@@ -1528,17 +1529,6 @@
       "metadata": {
         "id": "gIfDvo9L0UH2"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "manhat=air.groupby([\"host_name\",\"location\"],as_index=False)[\"price\"].sum().sort_values(\"price\",ascending=False)"
-      ],
-      "metadata": {
-        "id": "T05KYhZLIUUR"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
