--- a/Copy_of_Airbnb_project.ipynb
+++ b/Copy_of_Airbnb_project.ipynb
@@ -525,7 +525,7 @@
         "\n",
         "plt.subplot(1,2,2)\n",
         "room_typ = sns.countplot( x=\"location\",data = air,hue=\"room_type\")        #here hue is used to differnciate\n",
-        "room_typ.bar_label(room_typ.containers[0])\n",
+        "room_typ.bar_label(room_typ.containers[0])                           #creating a container\n",
         "for bars in room_typ.containers:\n",
         "    room_typ.bar_label(bars,label_type='edge')\n",
         "\n",
@@ -607,13 +607,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# FRequancy of the listing name\n",
+        "# FRequancy of the listing name / Branches of a perticular listing\n",
         "\n",
         "plt.figure(figsize=(20,8))\n",
-        "plt.ylim(4,20)\n",
-        "name_ = air[\"name\"].value_counts()\n",
-        "new=name_[:30].plot(kind=\"bar\",color=\"m\")\n",
-        "plt.show()"
+        "plt.ylim(4,20)                                       # setting Y axis limit\n",
+        "name_ = air[\"name\"].value_counts()                   # using value count\n",
+        "new=name_[:30].plot(kind=\"bar\",color=\"m\")            # ploting bar graph\n",
+        "\n",
+        "new.bar_label(new.containers[0])                     # creating a container\n",
+        "plt.show()                                           # show"
       ],
       "metadata": {
         "id": "oq3nVgpSU7nE"
@@ -672,11 +674,13 @@
       "source": [
         "# from this chart we can understand the effect of location on price\n",
         "\n",
+        "#grouping by according to location and price\n",
         "neighbour_ = air.groupby([\"location\"],as_index = False)[\"price\"].mean().sort_values(\"price\",ascending=False)\n",
         "\n",
         "plt.figure(figsize=(10,6))\n",
         "colors = [\"#69C6E8\", \"#69E8AC\", \"#D769E8\", \"#F880B5\", \"#89F882\"]\n",
-        "effect = sns.barplot(x=neighbour_.location ,y=neighbour_.price ,palette=colors )\n",
+        "effect = sns.barplot(x=neighbour_.location ,y=neighbour_.price ,palette=colors )         # giving 2 perameters on for x axis and y axis and then colors\n",
+        "\n",
         "effect.bar_label(effect.containers[0])\n",
         "plt.show()\n",
         "\n"
@@ -756,10 +760,9 @@
       "source": [
         "# distribution of location according to mimimum nights\n",
         "\n",
-        "min_ = air.groupby(\"location\")[[\"minimum_nights\"]].mean()    #grouping locataion according to minimum nights spend\n",
+        "min_ = air.groupby(\"location\")[[\"minimum_nights\"]].mean()          #grouping locataion according to minimum nights spend\n",
         "\n",
-        "\n",
-        "ex= [0,0,0.1,0,0]\n",
+        "ex= [0,0,0.1,0,0]                                                  # perameter for explode function which  is used to slice it from piechart\n",
         "col = [\"#d45087\",\"#f95d6a\",\"#a05195\",\"#665191\",\"#7CDDDD\"]\n",
         "\n",
         "plt.pie(min_['minimum_nights'],labels=min_.index, colors =col,autopct='%1.1f%%',explode=ex,radius=1.2,wedgeprops={\"linewidth\":1,\"edgecolor\": 'r'})      #here i use min_.index because after using group by function column on which we make group become index\n",
@@ -821,12 +824,12 @@
       "cell_type": "code",
       "source": [
         "# Longitude and latitude impact\n",
-        "sns.scatterplot(data=air, x=\"latitude\", y=\"longitude\", hue=\"location\",)\n",
+        "sns.scatterplot(data=air, x=\"latitude\", y=\"longitude\", hue=\"location\",)     # here hue is used to differnciate according to location\n",
         "\n",
         "\n",
         "\n",
-        "plt.ylabel(\"longitude of the area\")\n",
-        "plt.title(\"Distribution of area on basis of longitude and latitude\")\n",
+        "plt.ylabel(\"longitude of the area\")                                         # setting xlabels\n",
+        "plt.title(\"Distribution of area on basis of longitude and latitude\")        # setting y labels\n",
         "\n",
         "plt.show()\n"
       ],
@@ -984,9 +987,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 7 visualization code\n",
+        "#  ploting Box plot using location and avilability of rooms\n",
         "\n",
-        "sns.boxplot(data=air, x='location',y='availability_365',palette=\"deep\" ,notch =True, )\n",
+        "sns.boxplot(data=air, x='location',y='availability_365',palette=\"deep\" ,notch =True, )     # notch function help us to differnciate in medain value\n",
         "plt.show()\n",
         "\n"
       ],
@@ -1045,17 +1048,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 8 Host with multiple listing\n",
+        "#  Host with multiple listing\n",
         "\n",
         "\n",
         "host_name =air[\"host_name\"].value_counts()\n",
-        "plt.figure(figsize=(20,8))\n",
-        "new=host_name[:20].plot(kind=\"bar\")\n",
+        "plt.figure(figsize=(20,8))                   # used for size of figure\n",
+        "new=host_name[:20].plot(kind=\"bar\")          # here i used slicing to just show top 20 rows\n",
         "plt.title(\"Top 20 Host Names\",fontsize=16)\n",
         "\n",
         "plt.ylabel(\"Count\",fontsize=13)\n",
         "\n",
-        "new.bar_label(new.containers[0])\n",
+        "new.bar_label(new.containers[0])             # conatiner\n",
         "plt.show()\n",
         "\n",
         "\n",
@@ -1116,9 +1119,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - Host and review comparison\n",
+        "#  Host and review comparison\n",
+        "\n",
+        "# grouping by according to host name and how much reviews they are getting\n",
+        "\n",
         "plt.figure(figsize=(16,6))\n",
-        "manhat=air.groupby(\"host_name\",)[\"number_of_reviews\"].sum().sort_values(ascending=False)\n",
+        "manhat=air.groupby(\"host_name\",)[\"number_of_reviews\"].sum().sort_values(ascending=False)    # here i am sorting number of reviews in ascending order\n",
         "manhat[:15].plot(kind=\"bar\",color =\"cyan\" ,)\n",
         "plt.show()\n",
         "\n"
@@ -1178,6 +1184,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Reviews are one of the most important thing for any organisation to work because with the help of the reviews host knows that what costomers are expecting from the host and his team .  with the help of this host can also make decisons for future outlook..leaving reviews to share their experiences, help in the growth of the business. and we can clearly see that popular host are getting most reviews  just only sonders(NYC) is not getting much reviews**"
+      ],
+      "metadata": {
+        "id": "ncThZC-r15JQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### Chart - 10"
       ],
       "metadata": {
@@ -1187,12 +1202,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart  location to number of reviews\n",
+        "# which location getting most reviews per month\n",
         "\n",
         "final = air.groupby(\"location\",as_index=False)[['reviews_per_month']].max()\n",
+        "\n",
+        "\n",
         "ex = [0,0,0.1,0,0]\n",
         "color = ['#ff9999','#66b3ff','#99ff99','#ffcc99',\"#CE82FC\"]\n",
-        "plt.pie(final['reviews_per_month'], labels=final['location'],autopct='%1.1f%%',explode=ex,colors=color,shadow=True)\n",
+        "\n",
+        "\n",
+        "plt.pie(final['reviews_per_month'], labels=final['location'],autopct='%1.1f%%',explode=ex,colors=color,shadow=True)   # explode peramter is used to slice main value from pie and show is used to get shadow of chart\n",
         "plt.show()\n",
         "\n",
         "\n",
@@ -1262,15 +1281,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Reviews are one of the most important thing for any organisation to work because with the help of the reviews host knows that what costomers are expecting from the host and his team .  with the help of this host can also make decisons for future outlook..leaving reviews to share their experiences, help in the growth of the business. and we can clearly see that popular host are getting most reviews**"
-      ],
-      "metadata": {
-        "id": "ncThZC-r15JQ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "#### Chart - 11"
       ],
       "metadata": {
@@ -1280,12 +1290,17 @@
     {
       "cell_type": "code",
       "source": [
-        "plt.figure(figsize=(18, 7))\n",
+        "plt.figure(figsize=(18, 7))   # overall size of chart\n",
+        "\n",
+        "# subplot_1  for (manhattan)\n",
+        "\n",
         "plt.subplot(2, 3, 1)\n",
         "manhat=air[air[\"location\"]==\"Manhattan\"][\"host_name\"].value_counts().head(5)\n",
         "manhat.plot(kind=\"bar\",color=\"m\")\n",
         "plt.title(\"Manhattan\")\n",
         "plt.xlabel(\"host name\")\n",
+        "\n",
+        "# subplot_2 for (Brooklyn)\n",
         "\n",
         "\n",
         "plt.subplot(2, 3, 2)\n",
@@ -1294,17 +1309,25 @@
         "plt.title(\"Brooklyn\")\n",
         "plt.xlabel(\"host name\")\n",
         "\n",
+        "# subplot_3 for (Queens)\n",
+        "\n",
+        "\n",
         "plt.subplot(2, 3, 3)\n",
         "queen =air[air[\"location\"]==\"Queens\"][\"host_name\"].value_counts().head(6)\n",
         "queen.plot(kind=\"bar\",color=\"m\")\n",
         "plt.title(\"Queens\")\n",
         "plt.xlabel(\"host name\")\n",
         "\n",
+        "# subplot_4 for (Staten)\n",
+        "\n",
+        "\n",
         "plt.subplot(2, 3, 4)\n",
         "staten = air[air[\"location\"]==\"Staten Island\"][\"host_name\"].value_counts().head(6)\n",
         "staten.plot(kind=\"bar\")\n",
         "plt.title(\"Staten island\")\n",
         "plt.xlabel(\"host name\")\n",
+        "\n",
+        "# subplot_5 for (Bronx)\n",
         "\n",
         "\n",
         "plt.subplot(2, 3, 5)\n",
@@ -1313,7 +1336,7 @@
         "plt.title(\"Bronx\")\n",
         "plt.xlabel(\"host name\")\n",
         "\n",
-        "plt.tight_layout()\n",
+        "plt.tight_layout()        #it is used for the layout of all graphs and spacing\n",
         "\n",
         "plt.show()\n",
         "\n",
@@ -1427,7 +1450,7 @@
       "source": [
         "# Correlation Heatmap visualization code\n",
         "corr = air.corr(method='spearman',)\n",
-        "plt.figure(figsize=(13,10))\n",
+        "plt.figure(figsize=(11,9))\n",
         "plt.title(\"Correlation Between Different Variables\\n\")\n",
         "cmap=\"Blues\"\n",
         "sns.heatmap(corr, annot=True,cmap=cmap)\n",
@@ -1504,7 +1527,7 @@
         "* latitudes and logitude plays a cruical roll for a business.\n",
         "* Its easy to get a room in staten island and bronax rather  then manhattan and brooklyn in peak season beacause of avilability of room .\n",
         "* Michel david and sonders are most popular host of all but sonders has all listing in only manhattan michel and david has diversifed listings.\n",
-        "* Manhattan is the location where people are willing to post reviews and michel and david getting highest number of reviews\n",
+        "* Manhattan is the location where people are willing to post most number of reviews and michel and david getting highest number of reviews. so we can say reviews are directly related to popularity. only sonders(NYC) is famous but still not getting ample amount of reviews\n",
         "* Majority of people willing to pay under 3000 USD for a listing.\n",
         "\n",
         "\n",
