--- a/Copy_of_Airbnb_project.ipynb
+++ b/Copy_of_Airbnb_project.ipynb
@@ -16,13 +16,11 @@
         "bKJF3rekwFvQ",
         "K5QZ13OEpz2H",
         "lQ7QKXXCp7Bj",
-        "OH-pJp9IphqM",
+        "4Of9eVA-YrdM",
         "bbFf2-_FphqN",
         "_ouA3fa0phqN",
-        "NC_X3p0fY2L0",
         "JcMwzZxoAimU",
-        "H0kj-8xxnORC",
-        "gCX9965dhzqZ"
+        "H0kj-8xxnORC"
       ],
       "include_colab_link": true
     },
@@ -906,13 +904,52 @@
     {
       "cell_type": "code",
       "source": [
-        "# host with minimum night\n",
+        "#just want to create a chart of top 5 host who are charging from every location\n",
         "\n",
-        "host_id__ = air.groupby(['host_id'], as_index=False)['minimum_nights'].max().sort_values(by='minimum_nights', ascending=False).head(50)\n",
-        "plt.figure(figsize=(14,7))\n",
-        "plt.xticks(rotation=90)\n",
-        "sns.barplot(data = host_id__, x = 'host_id',y= 'minimum_nights')\n",
-        "plt.show()"
+        "plt.figure(figsize=(18, 7))\n",
+        "# subplot 01\n",
+        "\n",
+        "plt.subplot(2,3,1)\n",
+        "Manhattan = air[air[\"location\"] == \"Manhattan\"]\n",
+        "max_prices_Manhattan=Manhattan.groupby(\"host_name\")[\"price\"].max().reset_index().sort_values(\"price\",ascending=False).head()\n",
+        "sns.barplot(x=\"host_name\" ,y =\"price\" ,data = max_prices_Manhattan,color = 'steelblue')\n",
+        "plt.title(\"Manhattan\")\n",
+        "\n",
+        "# subplot 02\n",
+        "\n",
+        "plt.subplot(2,3,2)\n",
+        "Brooklyn = air[air[\"location\"] == \"Brooklyn\"]\n",
+        "max_prices_Brooklyn =Brooklyn.groupby(\"host_name\")[\"price\"].max().reset_index().sort_values(\"price\",ascending=False).head()\n",
+        "sns.barplot(x=\"host_name\" ,y =\"price\" ,data = max_prices_Brooklyn,color ='cyan')\n",
+        "plt.title(\"Brooklyn\")\n",
+        "\n",
+        "# subplot 03\n",
+        "\n",
+        "plt.subplot(2,3,3)\n",
+        "Bronx = air[air[\"location\"] == \"Bronx\"]\n",
+        "max_prices_Bronx = Bronx.groupby(\"host_name\")[\"price\"].max().reset_index().sort_values(\"price\",ascending=False).head()\n",
+        "sns.barplot(x=\"host_name\" ,y =\"price\" ,data = max_prices_Bronx,color =\"orange\")\n",
+        "plt.title(\"Bronx\")\n",
+        "\n",
+        "# subplot 04\n",
+        "\n",
+        "plt.subplot(2,3,4)\n",
+        "queen = air[air[\"location\"] == \"Queens\"]\n",
+        "max_prices_queens= queen.groupby(\"host_name\")[\"price\"].max().reset_index().sort_values(\"price\",ascending=False).head()\n",
+        "sns.barplot(x=\"host_name\" ,y =\"price\" ,data = max_prices_queens ,color = \"violet\")\n",
+        "plt.title(\"Queen\")\n",
+        "\n",
+        "# subplot 05\n",
+        "\n",
+        "plt.subplot(2,3,5)\n",
+        "Island = air[air[\"location\"] == \"Staten Island\"]\n",
+        "max_prices_Staten_Island =Island.groupby(\"host_name\")[\"price\"].max().reset_index().sort_values(\"price\",ascending=False).head()\n",
+        "sns.barplot(x=\"host_name\" ,y =\"price\" ,data = max_prices_Staten_Island,color='lightpink')\n",
+        "plt.title(\"Staten island\")\n",
+        "plt.tight_layout()\n",
+        "\n",
+        "plt.show()\n",
+        "\n"
       ],
       "metadata": {
         "id": "kuRf4wtuphqN"
@@ -932,15 +969,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "loh7H2nzphqN"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "##### 2. What is/are the insight(s) found from the chart?"
       ],
       "metadata": {
@@ -950,7 +978,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**From the chart i can clearly see that host in manhattan and brooklyn are charging higher then other places and host in bronx charging very less as compare to manhattan If budget is your primary concern, choosing the host in the Bronx or staten island**"
       ],
       "metadata": {
         "id": "VECbqPI7phqN"
@@ -969,7 +997,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**The Bronx can attract people that prioritize affordability, especially middle class  of society With lower costs, businesses in the Bronx may have more room to invest in growth and expansion.**"
       ],
       "metadata": {
         "id": "DW4_bGpfphqN"
@@ -1461,52 +1489,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## **5. Solution to Business Objective**"
-      ],
-      "metadata": {
-        "id": "JcMwzZxoAimU"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### What do you suggest the client to achieve Business Objective ?\n",
-        "Explain Briefly."
-      ],
-      "metadata": {
-        "id": "8G2x9gOozGDZ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "pASKb0qOza21"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### What did you know about your dataset?"
-      ],
-      "metadata": {
-        "id": "H0kj-8xxnORC"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "In this data set as much as i know that airbnb is a place where people can book  properties for few days or month and in this dataset there is description about people who chose what type of property and location and soo on and how they are rating them\n"
-      ],
-      "metadata": {
-        "id": "gfoNAAC-nUe_"
-      }
     },
     {
       "cell_type": "markdown",
