--- a/Copy_of_Airbnb_project.ipynb
+++ b/Copy_of_Airbnb_project.ipynb
@@ -152,6 +152,34 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## **5. Solution to Business Objective**"
+      ],
+      "metadata": {
+        "id": "JcMwzZxoAimU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### What do you suggest the client to achieve Business Objective ?\n",
+        "Explain Briefly."
+      ],
+      "metadata": {
+        "id": "8G2x9gOozGDZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Answer Here."
+      ],
+      "metadata": {
+        "id": "pASKb0qOza21"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Dataset Loading"
       ],
       "metadata": {
@@ -441,57 +469,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 3. ***Data Wrangling***"
-      ],
-      "metadata": {
-        "id": "dauF4eBmngu3"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Data Wrangling Code"
-      ],
-      "metadata": {
-        "id": "bKJF3rekwFvQ"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Write your code to make your dataset analysis ready.\n",
-        "\n",
-        "host_manhattan = air[air[\"location\"]==\"Manhattan\"][\"host_name\"].value_counts().head(5)\n",
-        "host_manhattan"
-      ],
-      "metadata": {
-        "id": "wk-9a2fpoLcV"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### What all manipulations have you done and insights you found?"
-      ],
-      "metadata": {
-        "id": "MSa1f5Uengrz"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "LbyXE7I1olp8"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## ***4. Data Vizualization, Storytelling & Experimenting with charts : Understand the relationships between variables***"
+        "## ***4. Data Vizualization, Storytelling & Experimenting with charts : Understand the relationships between variables and Data wrangling***"
       ],
       "metadata": {
         "id": "GF8Ens_Soomf"
@@ -1489,6 +1467,39 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **5. Solution to Business Objective**"
+      ],
+      "metadata": {
+        "id": "crDGUubyPD4h"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### What do you suggest the client to achieve Business Objective ?"
+      ],
+      "metadata": {
+        "id": "7kZGn2hgPH8k"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* As most of the listing are present in Manhatan and Brooklyn we should also focused on the other location which can help in rise in the revenue for the future.\n",
+        "* Bronx and staten island has most number of avilable rooms soo they can attract customers by giving some discount or by using some marketing statergy.\n",
+        "* As the sonder(NYC) have listing only in manhattan he is concentrated only to one place soo its risk for him for any disater and events in aperticular location soo he should diversified his listing to other places\n",
+        "* Most of the host are inclined toward Manhattan and Brooklyn because of there higher prices. soo we should ask for higher % in profit.\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "YK_50qlzPkwO"
+      }
     },
     {
       "cell_type": "markdown",
