--- a/Copy_of_Airbnb_project.ipynb
+++ b/Copy_of_Airbnb_project.ipynb
@@ -81,7 +81,7 @@
         "**Analysis on Airbnb DATA set**\n",
         "\n",
         "Airbnb  is an online marketplace that connects people who want to rent out their homes with people looking for accommodations in specific locales. The company has come a long way since 2007, when its co-founders first came up with the idea to invite paying guests to sleep on an air mattress in their living room....   This dataset has around 49,000 observations in it with 16 columns and it is a mix of categorical and numeric values.\n",
-        "the main goal of the analysis this data set is to improve the bussiness model and easily acess  this type of models in other places of word most of people like to travel . and most of the travelers find out that accomodation is the major problem during trips. and thats why i Take up this project to find out some insight how can people save there money through those platform .\n",
+        "the main goal of the analysis this data set is to improve the bussiness model and easily acess  this type of models in other places of word most of people like to travel . and most of the travelers find out that accomodation is the major problem during trips. and thats why i Take up this project to find out some insight how can people save there money through those platform .i start with looking this project and finding missing values and null values first i start clean this dataset then i start my analysis.\n",
         "i have soo many question soo i start with which location has most number of listing and and what are type of rooms there and on which location people willing to spend nights. Then i find out who is most popular host and if he is getting reviews or not. and distribution of price.and does latitudes and longitudes play a significant role in listing price. or  on which location people willing to spend more."
       ],
       "metadata": {
@@ -104,6 +104,38 @@
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Problem Statement**\n"
+      ],
+      "metadata": {
+        "id": "yQaldy8SH6Dl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* Which location has most number of listing and what types of rooms are present there?\n",
+        "* which listing has most number of branches?\n",
+        "* On which location peoples are willing to spend nights?\n",
+        "* On which location people are willing to spend more money for booking?\n",
+        "* on which location there are most number of avilable rooms?\n",
+        "* who is most popular host in each listing ?\n",
+        "* which location is getting highest number of reviews?\n",
+        "* which host is getting highest number of reviews?\n",
+        "* who is the top host from every location?\n",
+        "* price distribution among listing\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "mAvQO0YKc-HT"
       }
     },
     {
@@ -148,34 +180,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## **5. Solution to Business Objective**"
-      ],
-      "metadata": {
-        "id": "JcMwzZxoAimU"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### What do you suggest the client to achieve Business Objective ?\n",
-        "Explain Briefly."
-      ],
-      "metadata": {
-        "id": "8G2x9gOozGDZ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "pASKb0qOza21"
-      }
     },
     {
       "cell_type": "markdown",
