--- a/Airbnb_by_ankit.ipynb
+++ b/Airbnb_by_ankit.ipynb
@@ -12,16 +12,13 @@
         "PoPl-ycgm1ru",
         "_xUpRUvc25OC",
         "nA9Y7ga8ng1Z",
-        "dauF4eBmngu3",
-        "bKJF3rekwFvQ",
         "K5QZ13OEpz2H",
         "lQ7QKXXCp7Bj",
         "4Of9eVA-YrdM",
         "bbFf2-_FphqN",
-        "_ouA3fa0phqN",
-        "JcMwzZxoAimU",
-        "H0kj-8xxnORC"
+        "_ouA3fa0phqN"
       ],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +27,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
